responsive tasarıma baslandi.

--- a/1-Html/Odev/FormOdevi/form.html
+++ b/1-Html/Odev/FormOdevi/form.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/Tesla_Motors_Logo.svg/1280px-Tesla_Motors_Logo.svg.png"
-            alt="tesla_logo" height="20px" style="margin-top: 10px; margin-left: 10px" />
+            alt="tesla_logo" height="30px" style="margin-top: 10px; margin-left: 10px" />
         <hr />
     </header>
 
@@ -21,7 +21,8 @@
     </div>
 
     <div class="sagdiv">
-        <form style="margin-top: 20px;">
+        <span style="display: flex; justify-content: center;">
+          <form style="margin-top: 20px;">
             <label for="fname">First Name</label>
             <br>
             <input type="text" id="fname" name="firstname" placeholder="Your name..">
@@ -57,7 +58,8 @@
             <textarea id="subject" name="subject" placeholder="Write something.." style="height:100px"></textarea>
             <br>
             <input type="submit" value="Submit">
-        </form>
+        </form>  
+        </span> 
     </div>
 
 
